Added more serializers for Java types